--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Примеры, уроки, документация, разработка на Flutter (Dart)</title>
+    <title>Examples, tutorials, documentation, Flutter (Dart) development</title>
     <meta name="description" content="Примеры, уроки, документация, разработка на Google Flutter (Dart) приложения и игры на Android/iOS/iPhone/iPad, русский язык">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
@@ -17,8 +17,7 @@
 </head>
 <body>
 <div class="header">
-    <h1>Примеры, уроки, документация, разработка на Flutter (Dart)</h1>
-    <div>Подробное изучение Flutter в примерах и русской документации для новичков.</div>
+    <h1>Examples, tutorials, documentation, Flutter (Dart) development</h1>
 </div>
 <script src="/js/script.js"></script>
 </body>
