--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 <div class="header">
     <h1>Examples, tutorials, documentation, Flutter (Dart) development</h1>
+    <div><a href="/">Get access</a>
 </div>
 <script src="/js/script.js"></script>
 </body>
